--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Manik Sheoran</title>
 
     <link rel="icon" href="public/images/icon.png" type="image/x-icon">
@@ -15,7 +16,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/node_modules/aos/dist/aos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -279,55 +280,7 @@
 
 
 
-        <script>
-            // script.js
-
-            // Function to check if an element is in viewport
-            function isInViewport(element) {
-                const rect = element.getBoundingClientRect();
-                return (
-                    rect.top >= 0 &&
-                    rect.top <= (window.innerHeight || document.documentElement.clientHeight)
-                );
-            }
-
-            // Function to animate the score numbers when in viewport
-            function animateScoreNumbers() {
-                const scoreNumbers = document.querySelectorAll('.score-number');
-                scoreNumbers.forEach(scoreNumber => {
-                    const target = +scoreNumber.getAttribute('data-target');
-                    const increment = target / 100; // Adjust the increment for animation speed
-
-                    let current = 0;
-
-                    const updateScore = () => {
-                        scoreNumber.innerText = Math.round(current);
-                        if (current < target) {
-                            current += increment;
-                            setTimeout(updateScore, 20); // Adjust timeout for smoother animation
-                        } else {
-                            scoreNumber.innerText = target;
-                        }
-                    }
-
-                    updateScore();
-                });
-            }
-
-            // Check if the section is in viewport and trigger animation
-            function checkViewport() {
-                const section = document.getElementById('competitive-programming');
-                if (isInViewport(section)) {
-                    animateScoreNumbers();
-                    window.removeEventListener('scroll', checkViewport); // Remove listener once animated
-                }
-            }
-
-            // Listen for scroll events to check if the section is in viewport
-            window.addEventListener('scroll', checkViewport);
-
-
-        </script>
+        <script src="public/js/cp.js"> </script>
 
         <hr>
         <section id="contact">
@@ -362,13 +315,7 @@
         </section>
 
 
-        <script>
-            document.querySelectorAll('.star').forEach(star => {
-                star.addEventListener('mouseenter', () => {
-                    star.style.display = 'none';
-                });
-            });
-        </script>
+
     </main>
 
 
@@ -380,10 +327,10 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d59b1f7736.js" crossorigin="anonymous"></script>
 
-    <script src="/node_modules/aos/dist/aos.js"></script>
     <script src="public/js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        AOS.init();
+        AOS.init()
     </script>
 </body>
 
