--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Manik Sheoran</title>
 
-    <link rel="icon" href="public/images/icon.png" type="image/x-icon">
+    <link rel="icon" href="assets/images/icon.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,8 +20,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="public/css/main.css">
-    <link rel="stylesheet" href="public/css/dark.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/dark.css">
 
 </head>
 
@@ -30,7 +30,7 @@
     <div class='container-fluid'>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid" data-aos="fade-up">
-                <a class="navbar-brand" href="#"><img src="public/images/icon.png" alt="" height="40"></a>
+                <a class="navbar-brand" href="#"><img src="assets/images/icon.png" alt="" height="40"></a>
 
                 <i class="fas fa-sun sun-icon" style="padding: 10px;"></i>
                 <label class="switch">
@@ -67,7 +67,7 @@
                             <a class="nav-link" href="#contact">CONTACT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link resume" href="public/resume">RESUME</a>
+                            <a class="nav-link resume" href="assets/resume">RESUME</a>
                         </li>
                     </ul>
 
@@ -101,7 +101,7 @@
             </div>
         </section>
 
-        <script src="public/js/about.js"></script>
+        <script src="assets/js/about.js"></script>
         <hr>
         <section id="skills">
             <div class="container text-center" data-aos="fade-up">
@@ -199,7 +199,7 @@
                     <!-- Project 1 -->
                     <div class="card-out col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
                         <div class="card project-card" style="background-color: #8fefdc;">
-                            <img src="public/images/cultural.png" class="card-img-top" alt="Culture Project">
+                            <img src="assets/images/cultural.png" class="card-img-top" alt="Culture Project">
                             <div class="card-body">
                                 <h5 class="card-title">Cultural Canvas</h5>
                                 <h6 class="card-subtitle mb-2">Canvas of Bengal's Culture</h6>
@@ -219,7 +219,7 @@
                     <!-- Project 2 -->
                     <div class="card-out col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
                         <div class="card project-card" style="background-color: #f2acac;">
-                            <img src="public/images/car.png" class="card-img-top" alt="Mini Project">
+                            <img src="assets/images/car.png" class="card-img-top" alt="Mini Project">
                             <div class="card-body">
                                 <h5 class="card-title">Car Price Predictor</h5>
                                 <h6 class="card-subtitle mb-2 ">An ML model</h6>
@@ -280,7 +280,7 @@
 
 
 
-        <script src="public/js/cp.js"> </script>
+        <script src="assets/js/cp.js"> </script>
 
         <hr>
         <section id="contact">
@@ -327,7 +327,7 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d59b1f7736.js" crossorigin="anonymous"></script>
 
-    <script src="public/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init()
