--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <a class="nav-link" href="#contact">CONTACT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link resume" href="assets/resume">RESUME</a>
+                            <a class="nav-link resume" href="assets/resume.pdf">RESUME</a>
                         </li>
                     </ul>
 
@@ -232,7 +232,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Add more projects as needed -->
+                    <!-- more projects -->
                 </div>
             </div>
         </section>
