--- a/index.html
+++ b/index.html
@@ -4,77 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Manik Sheoran</title>
-
+    <meta name="description" content="Manik Sheoran's portfolio showcasing skills, projects, and contact information.">
+    <meta name="keywords" content="Manik, Portfolio, Web Developer, Projects, Skills">
+    <meta name="author" content="Manik Sheoran">
     <link rel="icon" href="assets/images/icon.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Tiny5&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Tiny5&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/dark.css">
 
 </head>
 
 <body>
-
-    <div class='container-fluid'>
+    <div class="container-fluid">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid" data-aos="fade-up">
-                <a class="navbar-brand" href="#"><img src="assets/images/icon.png" alt="" height="40"></a>
-
-                <i class="fas fa-sun sun-icon" style="padding: 10px;"></i>
-                <label class="switch">
+                <a class="navbar-brand" href="#" aria-label="Home">
+                    <img src="assets/images/icon.png" alt="Manik Sheoran Logo" height="40">
+                </a>
+                <i class="fas fa-sun sun-icon" aria-hidden="true" style="padding: 10px;"></i>
+                <label class="switch" aria-label="Toggle dark mode">
                     <input type="checkbox" id="dark-mode-toggle">
-
-                    <span class="slider round">
-                    </span>
-
+                    <span class="slider round"></span>
                 </label>
-
-                <i class="fas fa-moon moon-icon" style="padding: 10px;"></i>
-
-                <button class=" navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-moon moon-icon" aria-hidden="true" style="padding: 10px;"></i>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars fa-xl" style="color: #de0f66;"></i>
-
                 </button>
-
-
-                <div class=" collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0" style="order: 2;">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" style="text-decoration: 2px underline #de0f66"
-                                href="#">HOME</a>
+                            <a class="nav-link" aria-current="page" style="text-decoration: 2px underline #de0f66" href="#" aria-label="Home">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#skills">SKILLS</a>
+                            <a class="nav-link" href="#skills" aria-label="Skills">SKILLS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#projects">PROJECTS</a>
+                            <a class="nav-link" href="#projects" aria-label="Projects">PROJECTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">CONTACT</a>
+                            <a class="nav-link" href="#contact" aria-label="Contact">CONTACT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link resume" href="assets/resume.pdf">RESUME</a>
+                            <a class="nav-link resume" href="assets/resume.pdf" aria-label="Resume">RESUME</a>
                         </li>
                     </ul>
-
                 </div>
             </div>
         </nav>
     </div>
+
     <main>
         <section id="about">
             <div class="container text-center">
@@ -85,19 +72,17 @@
                         <div id="career-text">
                             <h2>a <span id="career"></span><span class="typing-cursor"></span></h2>
                         </div>
-                        <p id="career-description">I enjoy crafting user-centric, delightful, and intuitive web
-                            experiences.</p>
+                        <p id="career-description">I enjoy crafting user-centric, delightful, and intuitive web experiences.</p>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
-                        <img class="image" src="https://i.ibb.co/gVc6T7z/Logopit-1718385534969.png" alt="">
+                        <img class="image" src="assets/images/img-ms.png" alt="Manik Sheoran">
                     </div>
                 </div>
                 <div class="contact-social scroll-up">
-                    <a href="#">
+                    <a href="#" aria-label="Scroll up">
                         <i class="fa-solid fa-circle-chevron-up fa-2x"></i>
                     </a>
                 </div>
-
             </div>
         </section>
 
@@ -108,84 +93,68 @@
                 <h3>Skills</h3>
                 <p class="section-subtitle">Coding Spells I Master</p>
                 <div class="row justify-content-center">
-
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1869px-Python-logo-notext.svg.png"
-                                alt="Python">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1869px-Python-logo-notext.svg.png" alt="Python" aria-label="Python">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png"
-                                alt="JavaScript">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript" aria-label="JavaScript">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/C_Programming_Language.svg/1853px-C_Programming_Language.svg.png"
-                                alt="C Programming Language">
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
-                        <div class=" skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg"
-                                alt="Bootstrap">
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
-                        <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png"
-                                alt="HTML5">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/C_Programming_Language.svg/1853px-C_Programming_Language.svg.png" alt="C Programming Language" aria-label="C Programming Language">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/CSS3_logo.svg/1024px-CSS3_logo.svg.png"
-                                alt="CSS3">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg" alt="Bootstrap" aria-label="Bootstrap">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Expressjs.png"
-                                alt="Expressjs">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="HTML5" aria-label="HTML5">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Node.js_logo_2015.svg/2560px-Node.js_logo_2015.svg.png"
-                                alt="Node JS">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/CSS3_logo.svg/1024px-CSS3_logo.svg.png" alt="CSS3" aria-label="CSS3">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/MongoDB_Logo.svg/1280px-MongoDB_Logo.svg.png"
-                                alt="MongoDB">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Expressjs.png" alt="Expressjs" aria-label="Expressjs">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmrGmeBv3SOLSKz6OlTVlVYkfH9_W3BBgdrA&s"
-                                alt="github">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/MongoDB_Logo.svg/1280px-MongoDB_Logo.svg.png" alt="MongoDB">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://flask.palletsprojects.com/en/3.0.x/_images/flask-horizontal.png"
-                                alt="Flask">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Node.js_logo_2015.svg/2560px-Node.js_logo_2015.svg.png" alt="Node JS" aria-label="Node JS">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Selenium_Logo.png"
-                                alt="Selenium">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmrGmeBv3SOLSKz6OlTVlVYkfH9_W3BBgdrA&s" alt="github">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
+                        <div class="skill-content">
+                            <img src="https://flask.palletsprojects.com/en/3.0.x/_images/flask-horizontal.png" alt="Flask">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
+                        <div class="skill-content">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Selenium_Logo.png" alt="Selenium">
                         </div>
                     </div>
                 </div>
-                <p class="career-description">For more certifications and details, visit my <span><a
-                            href="https://linkedin.com/in/maniksheoran"
-                            style="text-decoration: none; color: #de0f66;">LinkedIn
+                <p class="career-description">For more certifications and details, visit my <span><a href="https://linkedin.com/in/maniksheoran" style="text-decoration: none; color: #de0f66;">LinkedIn
                             profile</a></span>.</p>
 
             </div>
@@ -208,10 +177,8 @@
                                     Bengal and support local artisans by providing them with a wider reach and audience.
                                 </p>
                                 <div class="card-links">
-                                    <a href="https://github.com/CapAru/Team-PixelCulture" class="card-link"><i
-                                            class="fa-brands fa-github"></i></a>
-                                    <a href="https://culturalcanvas.dev/" class="card-link"><i
-                                            class="fa-solid fa-link"></i></a>
+                                    <a href="https://github.com/CapAru/Team-PixelCulture" class="card-link"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://culturalcanvas.dev/" class="card-link"><i class="fa-solid fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -226,8 +193,7 @@
                                 <p class="card-text">It is a machine learning-based web application that
                                     predicts the prices of used cars. </p>
                                 <div class="card-links">
-                                    <a href="https://github.com/ManikSheoran/Car-Price-Prediction" class="card-link"><i
-                                            class="fa-brands fa-github"></i></a>
+                                    <a href="https://github.com/ManikSheoran/Car-Price-Prediction" class="card-link"><i class="fa-brands fa-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -285,11 +251,7 @@
         <section id="contact">
             <div class="container text-center" data-aos="fade-up">
                 <h2>Let's Connect</h2>
-                <p>Feel free to reach out for collaborations or just a friendly hello <img draggable="false"
-                        class="emoji" alt="😀" src="https://s.w.org/images/core/emoji/11/svg/1f600.svg"
-                        style="margin-left: auto; margin-right: auto; max-height: 1.2rem;"
-                        data-mce-style="display: block; margin-left: auto; margin-right: auto;"
-                        data-mce-src="https://s.w.org/images/core/emoji/11/svg/1f600.svg"></p>
+                <p>Feel free to reach out for collaborations or just a friendly hello <img draggable="false" class="emoji" alt="😀" src="https://s.w.org/images/core/emoji/11/svg/1f600.svg" style="margin-left: auto; margin-right: auto; max-height: 1.2rem;" data-mce-style="display: block; margin-left: auto; margin-right: auto;" data-mce-src="https://s.w.org/images/core/emoji/11/svg/1f600.svg"></p>
                 <p><a href="mailto:sheoranmanik@gmail.com" style="color: #de0f66; text-decoration: none;">
                         sheoranmanik@gmail.com
                     </a></p>
@@ -318,12 +280,8 @@
     </main>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d59b1f7736.js" crossorigin="anonymous"></script>
 
     <script src="assets/js/main.js"></script>
