--- a/index.html
+++ b/index.html
@@ -95,62 +95,62 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1869px-Python-logo-notext.svg.png" alt="Python" aria-label="Python">
+                            <img src="assets/images/Python.png" alt="Python" aria-label="Python">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript" aria-label="JavaScript">
+                            <img src="assets/images/JavaScript.png" alt="JavaScript" aria-label="JavaScript">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/C_Programming_Language.svg/1853px-C_Programming_Language.svg.png" alt="C Programming Language" aria-label="C Programming Language">
+                            <img src="assets/images/C_Programming_Language.png" alt="C Programming Language" aria-label="C Programming Language">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg" alt="Bootstrap" aria-label="Bootstrap">
+                            <img src="assets/images/Bootstrap_logo.svg" alt="Bootstrap" aria-label="Bootstrap">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="HTML5" aria-label="HTML5">
+                            <img src="assets/images/HTML5.png" alt="HTML5" aria-label="HTML5">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/CSS3_logo.svg/1024px-CSS3_logo.svg.png" alt="CSS3" aria-label="CSS3">
+                            <img src="assets/images/CSS3.png" alt="CSS3" aria-label="CSS3">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Expressjs.png" alt="Expressjs" aria-label="Expressjs">
+                            <img src="assets/images/Expressjs.png" alt="Expressjs" aria-label="Expressjs">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/MongoDB_Logo.svg/1280px-MongoDB_Logo.svg.png" alt="MongoDB">
+                            <img src="assets/images/MongoDB.png" alt="MongoDB" aria-label="MongoDB">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Node.js_logo_2015.svg/2560px-Node.js_logo_2015.svg.png" alt="Node JS" aria-label="Node JS">
+                            <img src="assets/images/Nodejs.png" alt="Node JS" aria-label="Node JS">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmrGmeBv3SOLSKz6OlTVlVYkfH9_W3BBgdrA&s" alt="github">
+                            <img src="assets/images/github.png" alt="github" aria-label="github">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://flask.palletsprojects.com/en/3.0.x/_images/flask-horizontal.png" alt="Flask">
+                            <img src="assets/images/flask.webp" alt="Flask" aria-label="Flask">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="skill-content">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Selenium_Logo.png" alt="Selenium">
+                            <img src="assets/images/Selenium.png" alt="Selenium" aria-label="Selenium">
                         </div>
                     </div>
                 </div>
@@ -177,8 +177,8 @@
                                     Bengal and support local artisans by providing them with a wider reach and audience.
                                 </p>
                                 <div class="card-links">
-                                    <a href="https://github.com/CapAru/Team-PixelCulture" class="card-link"><i class="fa-brands fa-github"></i></a>
-                                    <a href="https://culturalcanvas.dev/" class="card-link"><i class="fa-solid fa-link"></i></a>
+                                    <a href="https://github.com/CapAru/Team-PixelCulture" class="card-link"><i class="fa-brands fa-github" aria-label="github"></i></a>
+                                    <a href="https://culturalcanvas.dev/" class="card-link"><i class="fa-solid fa-link" aria-label="link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
                                 <p class="card-text">It is a machine learning-based web application that
                                     predicts the prices of used cars. </p>
                                 <div class="card-links">
-                                    <a href="https://github.com/ManikSheoran/Car-Price-Prediction" class="card-link"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://github.com/ManikSheoran/Car-Price-Prediction" class="card-link"><i class="fa-brands fa-github" aria-label="github"></i></a>
                                 </div>
                             </div>
                         </div>
