--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
                     <div class="col-lg-4 col-md-4 col-sm-6 col-6 skill-box" data-aos="zoom-in">
                         <div class="score-card">
                             <h4><a href="https://leetcode.com/u/ManikSheoran/" class="cp">LeetCode</a></h4>
-                            <div class="score-number" data-target="1645"></div>
+                            <div class="score-number" data-target="1645">0</div>
+                            <p>Highest Rating</p>
                             <div class="badge">
                                 Top 20%
                             </div>
@@ -221,8 +222,8 @@
                     <div class="col-lg-4 col-md-4 col-sm-6 col-6 skill-box" data-aos="zoom-in" data-aos-delay="200">
                         <div class="score-card">
                             <h4><a href="https://www.codechef.com/users/maniksheoran" class="cp">CodeChef</a></h4>
-
-                            <div class="score-number" data-target="1620"></div>
+                            <div class="score-number" data-target="1620">0</div>
+                            <p>Highest Rating</p>
                             <div class="badge">
                                 3 <i class="fa fa-star fa-sm"></i>
                             </div>
@@ -232,18 +233,16 @@
                     <div class="col-lg-4 col-md-4 col-sm-6 col-6 skill-box" data-aos="zoom-in" data-aos-delay="400">
                         <div class="score-card">
                             <h4><a href="https://codeforces.com/profile/maniksheoran" class="cp">CodeForces</a></h4>
-                            <div class="score-number" data-target="1039"></div>
+                            <div class="score-number" data-target="1039">0</div>
+                            <p>Highest Rating</p>
                             <div class="badge">
                                 Newbie
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </section>
-
-
 
         <script src="assets/js/cp.js"> </script>
 
