--- a/index.html
+++ b/index.html
@@ -165,9 +165,25 @@
                 <h3>Projects</h3>
                 <p>Here are some of the projects I have worked on</p>
                 <div class="row">
-                    <!-- Project 1 -->
+                    <!-- Project -->
                     <div class="card-out col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
                         <div class="card project-card" style="background-color: #8fefdc;">
+                            <img src="assets/images/campspot.png" class="card-img-top" alt="Culture Project">
+                            <div class="card-body">
+                                <h5 class="card-title">CampSpot</h5>
+                                <h6 class="card-subtitle mb-2">Explore, Discover, Repeat</h6>
+                                <p class="card-text">CampSpot is a user-friendly platform where campers can add, find, and review campsites. It features secure login, interactive maps, and a responsive design.
+                                </p>
+                                <div class="card-links">
+                                    <a href="https://github.com/ManikSheoran/CampSpot" class="card-link"><i class="fa-brands fa-github" aria-label="github"></i></a>
+                                    <a href="https://campspot.onrender.com/" class="card-link"><i class="fa-solid fa-link" aria-label="link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Project -->
+                    <div class="card-out col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
+                        <div class="card project-card" style="background-color: #f2acac;">
                             <img src="assets/images/cultural.png" class="card-img-top" alt="Culture Project">
                             <div class="card-body">
                                 <h5 class="card-title">Cultural Canvas</h5>
@@ -183,9 +199,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Project 2 -->
+                    <!-- Project -->
                     <div class="card-out col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
-                        <div class="card project-card" style="background-color: #f2acac;">
+                        <div class="card project-card" style="background-color: #ADE8F4;">
                             <img src="assets/images/car.png" class="card-img-top" alt="Mini Project">
                             <div class="card-body">
                                 <h5 class="card-title">Car Price Predictor</h5>
@@ -194,6 +210,20 @@
                                     predicts the prices of used cars. </p>
                                 <div class="card-links">
                                     <a href="https://github.com/ManikSheoran/Car-Price-Prediction" class="card-link"><i class="fa-brands fa-github" aria-label="github"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Project -->
+                    <div class="card-out col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
+                        <div class="card project-card" style="background-color: #FFDFBA;">
+                            <img src="assets/images/chatbot.png" class="card-img-top" alt="Culture Project">
+                            <div class="card-body">
+                                <h5 class="card-title">Travel Chatbot</h5>
+                                <h6 class="card-subtitle mb-2">Personal Travel Companion</h6>
+                                <p class="card-text">Powered by Gemini API, this chat bot simplifies trip planning, offers travel ideas, and provides insider tips to enhance your journey.</p>
+                                <div class="card-links">
+                                    <a href="https://github.com/ManikSheoran/chatbot" class="card-link"><i class="fa-brands fa-github" aria-label="github"></i></a>
                                 </div>
                             </div>
                         </div>
