--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
     <link rel="stylesheet" href="assets/css/dark.css">
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WYE6V8625Q"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-WYE6V8625Q');
+</script>
 
 <body>
     <div class="container-fluid">
